<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.SignInActivity">


    <View
        android:id="@+id/fill_view"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cookie"
        android:text="Welcome\nBack"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fill_view"
        app:layout_constraintLeft_toLeftOf="@id/fill_view"
        app:layout_constraintTop_toTopOf="@id/fill_view" />


    <View
        android:id="@+id/waves"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fill_view" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etlo_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:boxStrokeWidth="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waves"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etlo_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/light_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etlo_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etlo_password" />


    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password" />


    <TextView
        android:id="@+id/tv_do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_sign_in" />


    <TextView
        android:id="@+id/tvbt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_do_not_have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>