<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.ResetPasswordActivity">

    <View
        android:id="@+id/fill_view"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="Change\nPassword"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fill_view"
        app:layout_constraintLeft_toLeftOf="@id/fill_view"
        app:layout_constraintTop_toTopOf="@id/fill_view" />


    <View
        android:id="@+id/waves"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fill_view" />


    <TextView
        android:id="@+id/tv_provide_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_your_email_to_continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waves"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/light_blue"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etlo_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:boxStrokeWidth="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_provide_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bt_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/reset_password"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etlo_email" />



</androidx.constraintlayout.widget.ConstraintLayout>