<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:src="@drawable/clapperboard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/aladin"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/app_name"
            android:textAlignment="viewStart"
            android:textColor="@color/light_blue"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintRight_toLeftOf="@id/menu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_popular_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/popular_movie"
            android:textAlignment="viewStart"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />

        <TextView
            android:id="@+id/tv_bt_popular_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:padding="4dp"
            android:text="@string/view_all"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark_pink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_popular_movie"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popular_movies"
            tools:listitem="@layout/activity_popular_movies_list" />


        <TextView
            android:id="@+id/tv_upcoming_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/upcoming_movie"
            android:textAlignment="viewStart"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_popular_movie" />


        <TextView
            android:id="@+id/tv_bt_upcoming_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:padding="4dp"
            android:text="@string/view_all"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark_pink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_popular_movie" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_upcoming_movie"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming_movies"
            tools:listitem="@layout/activity_upcoming_movies_list" />


        <TextView
            android:id="@+id/tv_top_rated_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/top_rated_movie"
            android:textAlignment="viewStart"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_upcoming_movie" />


        <TextView
            android:id="@+id/tv_bt_top_rated_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:padding="4dp"
            android:text="@string/view_all"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark_pink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_upcoming_movie" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_top_rated_movie"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_rated_movies"
            tools:listitem="@layout/activity_top_rated_movies_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>