<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/backdrop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="235dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:tint="@color/red"
            app:backgroundTint="@color/light_blue"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="190dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline2">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                tools:src="@drawable/black_widow" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/genres1_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/genres_bg"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintLeft_toRightOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@id/backdrop"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/genres1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Action"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/genres2_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/genres_bg"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintLeft_toRightOf="@+id/genres1_card_view"
            app:layout_constraintTop_toBottomOf="@id/backdrop"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/genres2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/thriller"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:text="@string/english"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/genres1_card_view" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/language"
            app:layout_constraintTop_toBottomOf="@id/genres2_card_view"
            tools:text="134 min" />


        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/language">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/top_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="7.4" />

        </LinearLayout>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/language"
            tools:text="Release Date: " />


        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            tools:text="Black Widow" />

        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/storyline"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_name" />

        <TextView
            android:id="@+id/over_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_plot"
            tools:text="Natasha Romanoff, also known as Black Widow, confronts the darker parts of her ledger when a dangerous conspiracy with ties to her past arises. Pursued by a force that will stop at nothing to bring her down, Natasha must deal with her history as a spy and the broken relationships left in her wake long before she became an Avenger." />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/cast"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/over_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast"
            tools:listitem="@layout/cast_list_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>